// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`PromptItems rendering tests prompts - empty - test 1`] = `
<div>
  <div
    class="flex flex-col items-center justify-center gap-4 py-16 text-center"
    data-testid="prompts-empty"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-braces h-12 w-12 text-slate-300"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M8 3H7a2 2 0 0 0-2 2v5a2 2 0 0 1-2 2 2 2 0 0 1 2 2v5c0 1.1.9 2 2 2h1"
      />
      <path
        d="M16 21h1a2 2 0 0 0 2-2v-5c0-1.1.9-2 2-2a2 2 0 0 1-2-2V5a2 2 0 0 0-2-2h-1"
      />
    </svg>
    <h2
      class="text-lg font-semibold text-slate-700"
    >
      Noch keine Prompts
    </h2>
    <p
      class="max-w-sm text-sm text-muted-foreground"
    >
      Erstelle deinen ersten Prompt und baue deine persönliche Bibliothek auf.
    </p>
    <a
      class="inline-flex items-center justify-center whitespace-nowrap text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive text-primary-foreground h-8 rounded-md px-3 has-[>svg]:px-2.5 cursor-pointer gap-2 bg-blue-700 hover:bg-blue-800"
      data-slot="button"
      data-testid="create-prompt-btn"
      href="/templates/new"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-plus h-4 w-4"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M5 12h14"
        />
        <path
          d="M12 5v14"
        />
      </svg>
      Neuer Prompt
    </a>
  </div>
</div>
`;

exports[`PromptItems rendering tests prompts - filter empty - test 1`] = `
<div>
  <div
    class="flex flex-col items-center justify-center py-16 text-center"
    data-testid="prompts-filter-empty"
  >
    <p
      class="text-lg font-medium text-slate-700"
    >
      Keine Ergebnisse für diese Filter
    </p>
    <p
      class="mt-2 text-sm text-slate-500"
    >
      Passe deine Filterkriterien an oder setze sie zurück.
    </p>
  </div>
</div>
`;

exports[`PromptItems rendering tests view grid - test 1`] = `
<div>
  <div
    class="grid grid-cols-1 gap-6 sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4"
    data-testid="prompts-grid"
  >
    <div
      class="text-card-foreground shadow-sm group relative flex flex-col gap-0 rounded-lg border border-slate-300 bg-white p-0 transition-all duration-200 hover:border-slate-400 hover:shadow-md"
      data-slot="card"
      data-testid="prompt-item"
    >
      <div
        class="@container/card-header grid auto-rows-min grid-rows-[auto_auto] items-start has-data-[slot=card-action]:grid-cols-[1fr_auto] [.border-b]:pb-6 gap-2 p-5 pb-3"
        data-slot="card-header"
      >
        <div
          class="flex items-start justify-between gap-2"
        >
          <div
            class="flex flex-wrap gap-1"
            data-testid="categories"
          >
            <span
              class="rounded-md border border-slate-200 bg-slate-100 px-2 py-0.5 text-xs text-slate-700"
            >
              category 0
            </span>
            <span
              class="rounded-md border border-slate-200 bg-slate-100 px-2 py-0.5 text-xs text-slate-700"
            >
              category 1
            </span>
            <span
              class="rounded-md border border-slate-200 bg-slate-100 px-2 py-0.5 text-xs text-slate-700"
            >
              category 2
            </span>
          </div>
          <button
            aria-label="Aus Favoriten entfernen"
            aria-pressed="true"
            class="rounded-full p-1.5 transition-all hover:bg-slate-100"
            data-testid="toggle-favorite-btn"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-star h-4 w-4 transition-colors fill-yellow-400 text-yellow-400"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M11.525 2.295a.53.53 0 0 1 .95 0l2.31 4.679a2.123 2.123 0 0 0 1.595 1.16l5.166.756a.53.53 0 0 1 .294.904l-3.736 3.638a2.123 2.123 0 0 0-.611 1.878l.882 5.14a.53.53 0 0 1-.771.56l-4.618-2.428a2.122 2.122 0 0 0-1.973 0L6.396 21.01a.53.53 0 0 1-.77-.56l.881-5.139a2.122 2.122 0 0 0-.611-1.879L2.16 9.795a.53.53 0 0 1 .294-.906l5.165-.755a2.122 2.122 0 0 0 1.597-1.16z"
              />
            </svg>
          </button>
        </div>
        <a
          class="group/title"
          data-testid="view-details-link-title"
          href="/templates/334db648-f300-4284-8149-075ff465d750?collectionId=457bf695-6f74-44aa-9b3a-e179ea9e8171"
        >
          <h4
            class="line-clamp-2 cursor-pointer text-lg leading-tight font-semibold text-slate-900 transition-colors hover:text-blue-700"
          >
            title 0
          </h4>
        </a>
      </div>
      <div
        class="flex-1 px-5 pt-0 pb-3"
        data-slot="card-content"
      >
        <p
          class="line-clamp-3 text-sm leading-relaxed text-slate-700"
        >
          description 0
        </p>
      </div>
      <div
        class="flex items-center justify-between border-t border-slate-200 px-5 py-3"
      >
        <span
          class="rounded-md border border-slate-200 bg-slate-100 px-2 py-0.5 text-xs text-slate-700"
          title="Empfohlenes KI-Modell"
        >
          model 0
        </span>
        <div
          class="flex items-center gap-2 opacity-0 group-hover:opacity-100 focus-within:opacity-100 has-[button:disabled]:opacity-100 has-[button[data-state=open]]:opacity-100"
        >
          <button
            class="inline-flex items-center justify-center whitespace-nowrap text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive h-8 rounded-md gap-1.5 px-3 has-[>svg]:px-2.5 cursor-pointer bg-blue-700 text-white hover:bg-blue-800"
            data-slot="button"
            data-testid="use-prompt-btn"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-zap mr-1 h-4 w-4"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M4 14a1 1 0 0 1-.78-1.63l9.9-10.2a.5.5 0 0 1 .86.46l-1.92 6.02A1 1 0 0 0 13 10h7a1 1 0 0 1 .78 1.63l-9.9 10.2a.5.5 0 0 1-.86-.46l1.92-6.02A1 1 0 0 0 11 14z"
              />
            </svg>
            <span>
              Anwenden
            </span>
          </button>
          <div
            data-slot="dropdown-menu"
            data-testid="prompt-more-options-btn"
          >
            <button
              aria-label="Weitere Optionen"
              class="inline-flex items-center justify-center whitespace-nowrap text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive border bg-background shadow-xs hover:bg-accent hover:text-accent-foreground dark:bg-input/30 dark:border-input dark:hover:bg-input/50 h-8 rounded-md gap-1.5 px-3 has-[>svg]:px-2.5 cursor-pointer"
              data-slot="dropdown-menu-trigger"
              data-state="false"
              data-testid="more-options-trigger-btn"
              title="Weitere Optionen"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-ellipsis-vertical h-4 w-4"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="1"
                />
                <circle
                  cx="12"
                  cy="5"
                  r="1"
                />
                <circle
                  cx="12"
                  cy="19"
                  r="1"
                />
              </svg>
            </button>
            <div
              data-testid="mock-react-dropdown-menu-portal"
            />
          </div>
          <div
            data-slot="dialog"
            data-testid="mock-react-dialog-root"
          >
            <div
              data-slot="dialog-portal"
              data-testid="mock-react-dialog-portal"
            >
              <div
                class="fixed inset-0 z-50 bg-black/50 data-[state=closed]:animate-out data-[state=closed]:fade-out-0 data-[state=open]:animate-in data-[state=open]:fade-in-0"
                data-slot="dialog-overlay"
                data-testid="mock-react-dialog-overlay"
              />
            </div>
          </div>
          <div
            data-slot="dialog"
            data-testid="mock-react-dialog-root"
          >
            <div
              data-slot="dialog-portal"
              data-testid="mock-react-dialog-portal"
            >
              <div
                class="fixed inset-0 z-50 bg-black/50 data-[state=closed]:animate-out data-[state=closed]:fade-out-0 data-[state=open]:animate-in data-[state=open]:fade-in-0"
                data-slot="dialog-overlay"
                data-testid="mock-react-dialog-overlay"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="text-card-foreground shadow-sm group relative flex flex-col gap-0 rounded-lg border border-slate-300 bg-white p-0 transition-all duration-200 hover:border-slate-400 hover:shadow-md"
      data-slot="card"
      data-testid="prompt-item"
    >
      <div
        class="@container/card-header grid auto-rows-min grid-rows-[auto_auto] items-start has-data-[slot=card-action]:grid-cols-[1fr_auto] [.border-b]:pb-6 gap-2 p-5 pb-3"
        data-slot="card-header"
      >
        <div
          class="flex items-start justify-between gap-2"
        >
          <div
            class="flex flex-wrap gap-1"
            data-testid="categories"
          >
            <span
              class="rounded-md border border-slate-200 bg-slate-100 px-2 py-0.5 text-xs text-slate-700"
            >
              category 0
            </span>
            <span
              class="rounded-md border border-slate-200 bg-slate-100 px-2 py-0.5 text-xs text-slate-700"
            >
              category 1
            </span>
            <span
              class="rounded-md border border-slate-200 bg-slate-100 px-2 py-0.5 text-xs text-slate-700"
            >
              category 2
            </span>
          </div>
          <button
            aria-label="Zu Favoriten hinzufügen"
            aria-pressed="false"
            class="rounded-full p-1.5 transition-all hover:bg-slate-100 opacity-0 group-hover:opacity-100 focus-visible:opacity-100 group-focus-within:opacity-100 [.group:has(button[data-state=open])_&]:opacity-100"
            data-testid="toggle-favorite-btn"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-star h-4 w-4 transition-colors text-slate-400 hover:text-yellow-400"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M11.525 2.295a.53.53 0 0 1 .95 0l2.31 4.679a2.123 2.123 0 0 0 1.595 1.16l5.166.756a.53.53 0 0 1 .294.904l-3.736 3.638a2.123 2.123 0 0 0-.611 1.878l.882 5.14a.53.53 0 0 1-.771.56l-4.618-2.428a2.122 2.122 0 0 0-1.973 0L6.396 21.01a.53.53 0 0 1-.77-.56l.881-5.139a2.122 2.122 0 0 0-.611-1.879L2.16 9.795a.53.53 0 0 1 .294-.906l5.165-.755a2.122 2.122 0 0 0 1.597-1.16z"
              />
            </svg>
          </button>
        </div>
        <a
          class="group/title"
          data-testid="view-details-link-title"
          href="/templates/334db648-f300-4284-8149-075ff465d751?collectionId=457bf695-6f74-44aa-9b3a-e179ea9e8171"
        >
          <h4
            class="line-clamp-2 cursor-pointer text-lg leading-tight font-semibold text-slate-900 transition-colors hover:text-blue-700"
          >
            title 1
          </h4>
        </a>
      </div>
      <div
        class="flex-1 px-5 pt-0 pb-3"
        data-slot="card-content"
      >
        <p
          class="line-clamp-3 text-sm leading-relaxed text-slate-700"
        >
          description 1
        </p>
      </div>
      <div
        class="flex items-center justify-between border-t border-slate-200 px-5 py-3"
      >
        <span
          class="rounded-md border border-slate-200 bg-slate-100 px-2 py-0.5 text-xs text-slate-700"
          title="Empfohlenes KI-Modell"
        >
          model 1
        </span>
        <div
          class="flex items-center gap-2 opacity-0 group-hover:opacity-100 focus-within:opacity-100 has-[button:disabled]:opacity-100 has-[button[data-state=open]]:opacity-100"
        >
          <button
            class="inline-flex items-center justify-center whitespace-nowrap text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive h-8 rounded-md gap-1.5 px-3 has-[>svg]:px-2.5 cursor-pointer bg-blue-700 text-white hover:bg-blue-800"
            data-slot="button"
            data-testid="use-prompt-btn"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-zap mr-1 h-4 w-4"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M4 14a1 1 0 0 1-.78-1.63l9.9-10.2a.5.5 0 0 1 .86.46l-1.92 6.02A1 1 0 0 0 13 10h7a1 1 0 0 1 .78 1.63l-9.9 10.2a.5.5 0 0 1-.86-.46l1.92-6.02A1 1 0 0 0 11 14z"
              />
            </svg>
            <span>
              Anwenden
            </span>
          </button>
          <div
            data-slot="dropdown-menu"
            data-testid="prompt-more-options-btn"
          >
            <button
              aria-label="Weitere Optionen"
              class="inline-flex items-center justify-center whitespace-nowrap text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive border bg-background shadow-xs hover:bg-accent hover:text-accent-foreground dark:bg-input/30 dark:border-input dark:hover:bg-input/50 h-8 rounded-md gap-1.5 px-3 has-[>svg]:px-2.5 cursor-pointer"
              data-slot="dropdown-menu-trigger"
              data-state="false"
              data-testid="more-options-trigger-btn"
              title="Weitere Optionen"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-ellipsis-vertical h-4 w-4"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="1"
                />
                <circle
                  cx="12"
                  cy="5"
                  r="1"
                />
                <circle
                  cx="12"
                  cy="19"
                  r="1"
                />
              </svg>
            </button>
            <div
              data-testid="mock-react-dropdown-menu-portal"
            />
          </div>
          <div
            data-slot="dialog"
            data-testid="mock-react-dialog-root"
          >
            <div
              data-slot="dialog-portal"
              data-testid="mock-react-dialog-portal"
            >
              <div
                class="fixed inset-0 z-50 bg-black/50 data-[state=closed]:animate-out data-[state=closed]:fade-out-0 data-[state=open]:animate-in data-[state=open]:fade-in-0"
                data-slot="dialog-overlay"
                data-testid="mock-react-dialog-overlay"
              />
            </div>
          </div>
          <div
            data-slot="dialog"
            data-testid="mock-react-dialog-root"
          >
            <div
              data-slot="dialog-portal"
              data-testid="mock-react-dialog-portal"
            >
              <div
                class="fixed inset-0 z-50 bg-black/50 data-[state=closed]:animate-out data-[state=closed]:fade-out-0 data-[state=open]:animate-in data-[state=open]:fade-in-0"
                data-slot="dialog-overlay"
                data-testid="mock-react-dialog-overlay"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="text-card-foreground shadow-sm group relative flex flex-col gap-0 rounded-lg border border-slate-300 bg-white p-0 transition-all duration-200 hover:border-slate-400 hover:shadow-md"
      data-slot="card"
      data-testid="prompt-item"
    >
      <div
        class="@container/card-header grid auto-rows-min grid-rows-[auto_auto] items-start has-data-[slot=card-action]:grid-cols-[1fr_auto] [.border-b]:pb-6 gap-2 p-5 pb-3"
        data-slot="card-header"
      >
        <div
          class="flex items-start justify-between gap-2"
        >
          <div
            class="flex flex-wrap gap-1"
            data-testid="categories"
          >
            <span
              class="rounded-md border border-slate-200 bg-slate-100 px-2 py-0.5 text-xs text-slate-700"
            >
              category 0
            </span>
            <span
              class="rounded-md border border-slate-200 bg-slate-100 px-2 py-0.5 text-xs text-slate-700"
            >
              category 1
            </span>
            <span
              class="rounded-md border border-slate-200 bg-slate-100 px-2 py-0.5 text-xs text-slate-700"
            >
              category 2
            </span>
          </div>
          <button
            aria-label="Aus Favoriten entfernen"
            aria-pressed="true"
            class="rounded-full p-1.5 transition-all hover:bg-slate-100"
            data-testid="toggle-favorite-btn"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-star h-4 w-4 transition-colors fill-yellow-400 text-yellow-400"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M11.525 2.295a.53.53 0 0 1 .95 0l2.31 4.679a2.123 2.123 0 0 0 1.595 1.16l5.166.756a.53.53 0 0 1 .294.904l-3.736 3.638a2.123 2.123 0 0 0-.611 1.878l.882 5.14a.53.53 0 0 1-.771.56l-4.618-2.428a2.122 2.122 0 0 0-1.973 0L6.396 21.01a.53.53 0 0 1-.77-.56l.881-5.139a2.122 2.122 0 0 0-.611-1.879L2.16 9.795a.53.53 0 0 1 .294-.906l5.165-.755a2.122 2.122 0 0 0 1.597-1.16z"
              />
            </svg>
          </button>
        </div>
        <a
          class="group/title"
          data-testid="view-details-link-title"
          href="/templates/334db648-f300-4284-8149-075ff465d752?collectionId=457bf695-6f74-44aa-9b3a-e179ea9e8171"
        >
          <h4
            class="line-clamp-2 cursor-pointer text-lg leading-tight font-semibold text-slate-900 transition-colors hover:text-blue-700"
          >
            title 2
          </h4>
        </a>
      </div>
      <div
        class="flex-1 px-5 pt-0 pb-3"
        data-slot="card-content"
      >
        <p
          class="line-clamp-3 text-sm leading-relaxed text-slate-700"
        >
          description 2
        </p>
      </div>
      <div
        class="flex items-center justify-between border-t border-slate-200 px-5 py-3"
      >
        <span
          class="rounded-md border border-slate-200 bg-slate-100 px-2 py-0.5 text-xs text-slate-700"
          title="Empfohlenes KI-Modell"
        >
          model 2
        </span>
        <div
          class="flex items-center gap-2 opacity-0 group-hover:opacity-100 focus-within:opacity-100 has-[button:disabled]:opacity-100 has-[button[data-state=open]]:opacity-100"
        >
          <button
            class="inline-flex items-center justify-center whitespace-nowrap text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive h-8 rounded-md gap-1.5 px-3 has-[>svg]:px-2.5 cursor-pointer bg-blue-700 text-white hover:bg-blue-800"
            data-slot="button"
            data-testid="use-prompt-btn"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-zap mr-1 h-4 w-4"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M4 14a1 1 0 0 1-.78-1.63l9.9-10.2a.5.5 0 0 1 .86.46l-1.92 6.02A1 1 0 0 0 13 10h7a1 1 0 0 1 .78 1.63l-9.9 10.2a.5.5 0 0 1-.86-.46l1.92-6.02A1 1 0 0 0 11 14z"
              />
            </svg>
            <span>
              Anwenden
            </span>
          </button>
          <div
            data-slot="dropdown-menu"
            data-testid="prompt-more-options-btn"
          >
            <button
              aria-label="Weitere Optionen"
              class="inline-flex items-center justify-center whitespace-nowrap text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive border bg-background shadow-xs hover:bg-accent hover:text-accent-foreground dark:bg-input/30 dark:border-input dark:hover:bg-input/50 h-8 rounded-md gap-1.5 px-3 has-[>svg]:px-2.5 cursor-pointer"
              data-slot="dropdown-menu-trigger"
              data-state="false"
              data-testid="more-options-trigger-btn"
              title="Weitere Optionen"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-ellipsis-vertical h-4 w-4"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="1"
                />
                <circle
                  cx="12"
                  cy="5"
                  r="1"
                />
                <circle
                  cx="12"
                  cy="19"
                  r="1"
                />
              </svg>
            </button>
            <div
              data-testid="mock-react-dropdown-menu-portal"
            />
          </div>
          <div
            data-slot="dialog"
            data-testid="mock-react-dialog-root"
          >
            <div
              data-slot="dialog-portal"
              data-testid="mock-react-dialog-portal"
            >
              <div
                class="fixed inset-0 z-50 bg-black/50 data-[state=closed]:animate-out data-[state=closed]:fade-out-0 data-[state=open]:animate-in data-[state=open]:fade-in-0"
                data-slot="dialog-overlay"
                data-testid="mock-react-dialog-overlay"
              />
            </div>
          </div>
          <div
            data-slot="dialog"
            data-testid="mock-react-dialog-root"
          >
            <div
              data-slot="dialog-portal"
              data-testid="mock-react-dialog-portal"
            >
              <div
                class="fixed inset-0 z-50 bg-black/50 data-[state=closed]:animate-out data-[state=closed]:fade-out-0 data-[state=open]:animate-in data-[state=open]:fade-in-0"
                data-slot="dialog-overlay"
                data-testid="mock-react-dialog-overlay"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`PromptItems rendering tests view list - test 1`] = `
<div>
  <div
    class="space-y-4"
    data-testid="prompts-list"
  >
    <div
      class="text-card-foreground shadow-sm group relative flex flex-col gap-0 rounded-lg border border-slate-300 bg-white p-0 transition-all duration-200 hover:border-slate-400 hover:shadow-md"
      data-slot="card"
      data-testid="prompt-item"
    >
      <div
        class="@container/card-header grid auto-rows-min grid-rows-[auto_auto] items-start has-data-[slot=card-action]:grid-cols-[1fr_auto] [.border-b]:pb-6 gap-2 p-5 pb-3"
        data-slot="card-header"
      >
        <div
          class="flex items-start justify-between gap-2"
        >
          <div
            class="flex flex-wrap gap-1"
            data-testid="categories"
          >
            <span
              class="rounded-md border border-slate-200 bg-slate-100 px-2 py-0.5 text-xs text-slate-700"
            >
              category 0
            </span>
            <span
              class="rounded-md border border-slate-200 bg-slate-100 px-2 py-0.5 text-xs text-slate-700"
            >
              category 1
            </span>
            <span
              class="rounded-md border border-slate-200 bg-slate-100 px-2 py-0.5 text-xs text-slate-700"
            >
              category 2
            </span>
          </div>
          <button
            aria-label="Aus Favoriten entfernen"
            aria-pressed="true"
            class="rounded-full p-1.5 transition-all hover:bg-slate-100"
            data-testid="toggle-favorite-btn"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-star h-4 w-4 transition-colors fill-yellow-400 text-yellow-400"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M11.525 2.295a.53.53 0 0 1 .95 0l2.31 4.679a2.123 2.123 0 0 0 1.595 1.16l5.166.756a.53.53 0 0 1 .294.904l-3.736 3.638a2.123 2.123 0 0 0-.611 1.878l.882 5.14a.53.53 0 0 1-.771.56l-4.618-2.428a2.122 2.122 0 0 0-1.973 0L6.396 21.01a.53.53 0 0 1-.77-.56l.881-5.139a2.122 2.122 0 0 0-.611-1.879L2.16 9.795a.53.53 0 0 1 .294-.906l5.165-.755a2.122 2.122 0 0 0 1.597-1.16z"
              />
            </svg>
          </button>
        </div>
        <a
          class="group/title"
          data-testid="view-details-link-title"
          href="/templates/334db648-f300-4284-8149-075ff465d750"
        >
          <h4
            class="line-clamp-2 cursor-pointer text-lg leading-tight font-semibold text-slate-900 transition-colors hover:text-blue-700"
          >
            title 0
          </h4>
        </a>
      </div>
      <div
        class="flex-1 px-5 pt-0 pb-3"
        data-slot="card-content"
      >
        <p
          class="line-clamp-3 text-sm leading-relaxed text-slate-700"
        >
          description 0
        </p>
      </div>
      <div
        class="flex items-center justify-between border-t border-slate-200 px-5 py-3"
      >
        <span
          class="rounded-md border border-slate-200 bg-slate-100 px-2 py-0.5 text-xs text-slate-700"
          title="Empfohlenes KI-Modell"
        >
          model 0
        </span>
        <div
          class="flex items-center gap-2 opacity-0 group-hover:opacity-100 focus-within:opacity-100 has-[button:disabled]:opacity-100 has-[button[data-state=open]]:opacity-100"
        >
          <button
            class="inline-flex items-center justify-center whitespace-nowrap text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive h-8 rounded-md gap-1.5 px-3 has-[>svg]:px-2.5 cursor-pointer bg-blue-700 text-white hover:bg-blue-800"
            data-slot="button"
            data-testid="use-prompt-btn"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-zap mr-1 h-4 w-4"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M4 14a1 1 0 0 1-.78-1.63l9.9-10.2a.5.5 0 0 1 .86.46l-1.92 6.02A1 1 0 0 0 13 10h7a1 1 0 0 1 .78 1.63l-9.9 10.2a.5.5 0 0 1-.86-.46l1.92-6.02A1 1 0 0 0 11 14z"
              />
            </svg>
            <span>
              Anwenden
            </span>
          </button>
          <div
            data-slot="dropdown-menu"
            data-testid="prompt-more-options-btn"
          >
            <button
              aria-label="Weitere Optionen"
              class="inline-flex items-center justify-center whitespace-nowrap text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive border bg-background shadow-xs hover:bg-accent hover:text-accent-foreground dark:bg-input/30 dark:border-input dark:hover:bg-input/50 h-8 rounded-md gap-1.5 px-3 has-[>svg]:px-2.5 cursor-pointer"
              data-slot="dropdown-menu-trigger"
              data-state="false"
              data-testid="more-options-trigger-btn"
              title="Weitere Optionen"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-ellipsis-vertical h-4 w-4"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="1"
                />
                <circle
                  cx="12"
                  cy="5"
                  r="1"
                />
                <circle
                  cx="12"
                  cy="19"
                  r="1"
                />
              </svg>
            </button>
            <div
              data-testid="mock-react-dropdown-menu-portal"
            />
          </div>
          <div
            data-slot="dialog"
            data-testid="mock-react-dialog-root"
          >
            <div
              data-slot="dialog-portal"
              data-testid="mock-react-dialog-portal"
            >
              <div
                class="fixed inset-0 z-50 bg-black/50 data-[state=closed]:animate-out data-[state=closed]:fade-out-0 data-[state=open]:animate-in data-[state=open]:fade-in-0"
                data-slot="dialog-overlay"
                data-testid="mock-react-dialog-overlay"
              />
            </div>
          </div>
          <div
            data-slot="dialog"
            data-testid="mock-react-dialog-root"
          >
            <div
              data-slot="dialog-portal"
              data-testid="mock-react-dialog-portal"
            >
              <div
                class="fixed inset-0 z-50 bg-black/50 data-[state=closed]:animate-out data-[state=closed]:fade-out-0 data-[state=open]:animate-in data-[state=open]:fade-in-0"
                data-slot="dialog-overlay"
                data-testid="mock-react-dialog-overlay"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="text-card-foreground shadow-sm group relative flex flex-col gap-0 rounded-lg border border-slate-300 bg-white p-0 transition-all duration-200 hover:border-slate-400 hover:shadow-md"
      data-slot="card"
      data-testid="prompt-item"
    >
      <div
        class="@container/card-header grid auto-rows-min grid-rows-[auto_auto] items-start has-data-[slot=card-action]:grid-cols-[1fr_auto] [.border-b]:pb-6 gap-2 p-5 pb-3"
        data-slot="card-header"
      >
        <div
          class="flex items-start justify-between gap-2"
        >
          <div
            class="flex flex-wrap gap-1"
            data-testid="categories"
          >
            <span
              class="rounded-md border border-slate-200 bg-slate-100 px-2 py-0.5 text-xs text-slate-700"
            >
              category 0
            </span>
            <span
              class="rounded-md border border-slate-200 bg-slate-100 px-2 py-0.5 text-xs text-slate-700"
            >
              category 1
            </span>
            <span
              class="rounded-md border border-slate-200 bg-slate-100 px-2 py-0.5 text-xs text-slate-700"
            >
              category 2
            </span>
          </div>
          <button
            aria-label="Zu Favoriten hinzufügen"
            aria-pressed="false"
            class="rounded-full p-1.5 transition-all hover:bg-slate-100 opacity-0 group-hover:opacity-100 focus-visible:opacity-100 group-focus-within:opacity-100 [.group:has(button[data-state=open])_&]:opacity-100"
            data-testid="toggle-favorite-btn"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-star h-4 w-4 transition-colors text-slate-400 hover:text-yellow-400"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M11.525 2.295a.53.53 0 0 1 .95 0l2.31 4.679a2.123 2.123 0 0 0 1.595 1.16l5.166.756a.53.53 0 0 1 .294.904l-3.736 3.638a2.123 2.123 0 0 0-.611 1.878l.882 5.14a.53.53 0 0 1-.771.56l-4.618-2.428a2.122 2.122 0 0 0-1.973 0L6.396 21.01a.53.53 0 0 1-.77-.56l.881-5.139a2.122 2.122 0 0 0-.611-1.879L2.16 9.795a.53.53 0 0 1 .294-.906l5.165-.755a2.122 2.122 0 0 0 1.597-1.16z"
              />
            </svg>
          </button>
        </div>
        <a
          class="group/title"
          data-testid="view-details-link-title"
          href="/templates/334db648-f300-4284-8149-075ff465d751"
        >
          <h4
            class="line-clamp-2 cursor-pointer text-lg leading-tight font-semibold text-slate-900 transition-colors hover:text-blue-700"
          >
            title 1
          </h4>
        </a>
      </div>
      <div
        class="flex-1 px-5 pt-0 pb-3"
        data-slot="card-content"
      >
        <p
          class="line-clamp-3 text-sm leading-relaxed text-slate-700"
        >
          description 1
        </p>
      </div>
      <div
        class="flex items-center justify-between border-t border-slate-200 px-5 py-3"
      >
        <span
          class="rounded-md border border-slate-200 bg-slate-100 px-2 py-0.5 text-xs text-slate-700"
          title="Empfohlenes KI-Modell"
        >
          model 1
        </span>
        <div
          class="flex items-center gap-2 opacity-0 group-hover:opacity-100 focus-within:opacity-100 has-[button:disabled]:opacity-100 has-[button[data-state=open]]:opacity-100"
        >
          <button
            class="inline-flex items-center justify-center whitespace-nowrap text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive h-8 rounded-md gap-1.5 px-3 has-[>svg]:px-2.5 cursor-pointer bg-blue-700 text-white hover:bg-blue-800"
            data-slot="button"
            data-testid="use-prompt-btn"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-zap mr-1 h-4 w-4"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M4 14a1 1 0 0 1-.78-1.63l9.9-10.2a.5.5 0 0 1 .86.46l-1.92 6.02A1 1 0 0 0 13 10h7a1 1 0 0 1 .78 1.63l-9.9 10.2a.5.5 0 0 1-.86-.46l1.92-6.02A1 1 0 0 0 11 14z"
              />
            </svg>
            <span>
              Anwenden
            </span>
          </button>
          <div
            data-slot="dropdown-menu"
            data-testid="prompt-more-options-btn"
          >
            <button
              aria-label="Weitere Optionen"
              class="inline-flex items-center justify-center whitespace-nowrap text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive border bg-background shadow-xs hover:bg-accent hover:text-accent-foreground dark:bg-input/30 dark:border-input dark:hover:bg-input/50 h-8 rounded-md gap-1.5 px-3 has-[>svg]:px-2.5 cursor-pointer"
              data-slot="dropdown-menu-trigger"
              data-state="false"
              data-testid="more-options-trigger-btn"
              title="Weitere Optionen"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-ellipsis-vertical h-4 w-4"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="1"
                />
                <circle
                  cx="12"
                  cy="5"
                  r="1"
                />
                <circle
                  cx="12"
                  cy="19"
                  r="1"
                />
              </svg>
            </button>
            <div
              data-testid="mock-react-dropdown-menu-portal"
            />
          </div>
          <div
            data-slot="dialog"
            data-testid="mock-react-dialog-root"
          >
            <div
              data-slot="dialog-portal"
              data-testid="mock-react-dialog-portal"
            >
              <div
                class="fixed inset-0 z-50 bg-black/50 data-[state=closed]:animate-out data-[state=closed]:fade-out-0 data-[state=open]:animate-in data-[state=open]:fade-in-0"
                data-slot="dialog-overlay"
                data-testid="mock-react-dialog-overlay"
              />
            </div>
          </div>
          <div
            data-slot="dialog"
            data-testid="mock-react-dialog-root"
          >
            <div
              data-slot="dialog-portal"
              data-testid="mock-react-dialog-portal"
            >
              <div
                class="fixed inset-0 z-50 bg-black/50 data-[state=closed]:animate-out data-[state=closed]:fade-out-0 data-[state=open]:animate-in data-[state=open]:fade-in-0"
                data-slot="dialog-overlay"
                data-testid="mock-react-dialog-overlay"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="text-card-foreground shadow-sm group relative flex flex-col gap-0 rounded-lg border border-slate-300 bg-white p-0 transition-all duration-200 hover:border-slate-400 hover:shadow-md"
      data-slot="card"
      data-testid="prompt-item"
    >
      <div
        class="@container/card-header grid auto-rows-min grid-rows-[auto_auto] items-start has-data-[slot=card-action]:grid-cols-[1fr_auto] [.border-b]:pb-6 gap-2 p-5 pb-3"
        data-slot="card-header"
      >
        <div
          class="flex items-start justify-between gap-2"
        >
          <div
            class="flex flex-wrap gap-1"
            data-testid="categories"
          >
            <span
              class="rounded-md border border-slate-200 bg-slate-100 px-2 py-0.5 text-xs text-slate-700"
            >
              category 0
            </span>
            <span
              class="rounded-md border border-slate-200 bg-slate-100 px-2 py-0.5 text-xs text-slate-700"
            >
              category 1
            </span>
            <span
              class="rounded-md border border-slate-200 bg-slate-100 px-2 py-0.5 text-xs text-slate-700"
            >
              category 2
            </span>
          </div>
          <button
            aria-label="Aus Favoriten entfernen"
            aria-pressed="true"
            class="rounded-full p-1.5 transition-all hover:bg-slate-100"
            data-testid="toggle-favorite-btn"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-star h-4 w-4 transition-colors fill-yellow-400 text-yellow-400"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M11.525 2.295a.53.53 0 0 1 .95 0l2.31 4.679a2.123 2.123 0 0 0 1.595 1.16l5.166.756a.53.53 0 0 1 .294.904l-3.736 3.638a2.123 2.123 0 0 0-.611 1.878l.882 5.14a.53.53 0 0 1-.771.56l-4.618-2.428a2.122 2.122 0 0 0-1.973 0L6.396 21.01a.53.53 0 0 1-.77-.56l.881-5.139a2.122 2.122 0 0 0-.611-1.879L2.16 9.795a.53.53 0 0 1 .294-.906l5.165-.755a2.122 2.122 0 0 0 1.597-1.16z"
              />
            </svg>
          </button>
        </div>
        <a
          class="group/title"
          data-testid="view-details-link-title"
          href="/templates/334db648-f300-4284-8149-075ff465d752"
        >
          <h4
            class="line-clamp-2 cursor-pointer text-lg leading-tight font-semibold text-slate-900 transition-colors hover:text-blue-700"
          >
            title 2
          </h4>
        </a>
      </div>
      <div
        class="flex-1 px-5 pt-0 pb-3"
        data-slot="card-content"
      >
        <p
          class="line-clamp-3 text-sm leading-relaxed text-slate-700"
        >
          description 2
        </p>
      </div>
      <div
        class="flex items-center justify-between border-t border-slate-200 px-5 py-3"
      >
        <span
          class="rounded-md border border-slate-200 bg-slate-100 px-2 py-0.5 text-xs text-slate-700"
          title="Empfohlenes KI-Modell"
        >
          model 2
        </span>
        <div
          class="flex items-center gap-2 opacity-0 group-hover:opacity-100 focus-within:opacity-100 has-[button:disabled]:opacity-100 has-[button[data-state=open]]:opacity-100"
        >
          <button
            class="inline-flex items-center justify-center whitespace-nowrap text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive h-8 rounded-md gap-1.5 px-3 has-[>svg]:px-2.5 cursor-pointer bg-blue-700 text-white hover:bg-blue-800"
            data-slot="button"
            data-testid="use-prompt-btn"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-zap mr-1 h-4 w-4"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M4 14a1 1 0 0 1-.78-1.63l9.9-10.2a.5.5 0 0 1 .86.46l-1.92 6.02A1 1 0 0 0 13 10h7a1 1 0 0 1 .78 1.63l-9.9 10.2a.5.5 0 0 1-.86-.46l1.92-6.02A1 1 0 0 0 11 14z"
              />
            </svg>
            <span>
              Anwenden
            </span>
          </button>
          <div
            data-slot="dropdown-menu"
            data-testid="prompt-more-options-btn"
          >
            <button
              aria-label="Weitere Optionen"
              class="inline-flex items-center justify-center whitespace-nowrap text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive border bg-background shadow-xs hover:bg-accent hover:text-accent-foreground dark:bg-input/30 dark:border-input dark:hover:bg-input/50 h-8 rounded-md gap-1.5 px-3 has-[>svg]:px-2.5 cursor-pointer"
              data-slot="dropdown-menu-trigger"
              data-state="false"
              data-testid="more-options-trigger-btn"
              title="Weitere Optionen"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-ellipsis-vertical h-4 w-4"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="1"
                />
                <circle
                  cx="12"
                  cy="5"
                  r="1"
                />
                <circle
                  cx="12"
                  cy="19"
                  r="1"
                />
              </svg>
            </button>
            <div
              data-testid="mock-react-dropdown-menu-portal"
            />
          </div>
          <div
            data-slot="dialog"
            data-testid="mock-react-dialog-root"
          >
            <div
              data-slot="dialog-portal"
              data-testid="mock-react-dialog-portal"
            >
              <div
                class="fixed inset-0 z-50 bg-black/50 data-[state=closed]:animate-out data-[state=closed]:fade-out-0 data-[state=open]:animate-in data-[state=open]:fade-in-0"
                data-slot="dialog-overlay"
                data-testid="mock-react-dialog-overlay"
              />
            </div>
          </div>
          <div
            data-slot="dialog"
            data-testid="mock-react-dialog-root"
          >
            <div
              data-slot="dialog-portal"
              data-testid="mock-react-dialog-portal"
            >
              <div
                class="fixed inset-0 z-50 bg-black/50 data-[state=closed]:animate-out data-[state=closed]:fade-out-0 data-[state=open]:animate-in data-[state=open]:fade-in-0"
                data-slot="dialog-overlay"
                data-testid="mock-react-dialog-overlay"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
